--- a/src/components/styles/Bannar.css
+++ b/src/components/styles/Bannar.css
@@ -17,19 +17,29 @@ header.bannar span.tagline {
   font-size: 20px;
   margin-bottom: 16px;
   display: inline-block;
+  transition: 0.3s linear;
+  cursor: pointer;
+}
+
+header.bannar span.tagline:hover {
+  background-color: #fff;
+  color: #121212;
+  box-shadow: 0 0 4px 0px #fff;
+  text-shadow: 0 0 2px #121212;
 }
 
 header.bannar div.container div.row div h1 {
-  font-size: 65px;
+  font-size: 62px;
   font-weight: 700;
   letter-spacing: 0.8px;
   line-height: 1;
   margin-bottom: 20px;
-  display: block;
 }
+
 
 header.bannar span.wrap {
   border-right: 0.08em solid #666;
+  /* display: block; */
   /* animation: typing 1.5s infinite linear; */
 }
 
